fixed suggestion z-index

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -334,6 +334,7 @@ $dimension: 25px;
     left: 60px;
     background-color: white;
     box-shadow: 0 0 5px 2px #0002;
+    z-index: 4;
 
     li {
         padding: 4px;
